log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 04:26:30 PM UTC: 
 tests:  0|6
total_score: 0/70
e4aad24
Fri 31 Mar 2023 11:25:16 AM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ce206d2
Fri 31 Mar 2023 11:26:50 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0027e7a
Fri 31 Mar 2023 11:27:13 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
e608bcb
Fri 31 Mar 2023 11:28:12 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9e1219f
Fri 31 Mar 2023 11:29:02 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
730a72d
Fri 31 Mar 2023 11:32:16 AM UTC: 
 arraylist.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:17: error: assignment to ‘void **’ from incompatible pointer type ‘int **’ [-Werror=incompatible-pointer-types]
   17 |   lista -> data = (int**)malloc(sizeof(int*)*(lista -> size));
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
56278e6
Fri 31 Mar 2023 11:32:33 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0b195b9
Fri 31 Mar 2023 11:32:54 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d6c3358
